[package]
name = "candid-parser-wasm"
authors = ["Artyom Titov"]
description = "WASM bindings to `candid_parser` crate"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
wee_alloc = { version = "0.4.5", optional = true }
candid_parser = { version = "0.1.3" }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
serde_json = "1.0.113"
gloo-utils = { version = "0.1", features = ["serde"] }

[profile.release]
lto = true
opt-level = 3

[features]
default = ["wee_alloc"]
